--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   shimmer:
   pin_code_text_field:
   intl_phone_number_input:
+  url_launcher:
 
 
   # The following adds the Cupertino Icons font to your application.
